don't default to app volume mount; create s3 bucket on boot; fix revAll gulp step

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - MINIO_SECRET_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
     build: .
     volumes:
-      - ./:/usr/src/app
+      # - ./:/usr/src/app
       - /usr/src/app/node_modules
     command: npm start
     ports:
