WIP first partially working version without mongodb, using sqlite/sequelize

--- a/package.json
+++ b/package.json
@@ -53,11 +53,14 @@
     "raven": "1.2.0",
     "request": "2.81.0",
     "sanitize-html": "^1.11.1",
+    "sequelize": "^4.37.6",
     "serve-favicon": "~2.4.2",
     "serve-static": "^1.13.1",
     "slug": "0.9.1",
+    "sqlite3": "^4.0.0",
     "swig": "1.4.2",
     "underscore": "1.8.3",
+    "uuid": "^3.2.1",
     "validator": "7.0.0",
     "weak": "1.0.1",
     "ws": "2.2.3"
