--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "cookie-parser": "~1.4.3",
     "csurf": "1.9.0",
     "debug": "~2.6.3",
+    "electron": "^1.8.4",
     "execSync": "latest",
     "express": "~4.13.0",
     "extract-zip": "^1.6.6",
+    "file-type": "^7.6.0",
     "glob": "7.1.1",
     "gm": "1.23.0",
     "googleapis": "18.0.0",
@@ -40,6 +42,7 @@
     "lodash": "^4.3.0",
     "log-timestamp": "latest",
     "md5": "2.2.1",
+    "mime-types": "^2.1.18",
     "mock-aws-s3": "^2.6.0",
     "moment": "^2.19.3",
     "mongoose": "4.9.3",
@@ -51,6 +54,7 @@
     "pm2": "latest",
     "qr-image": "3.2.0",
     "raven": "1.2.0",
+    "read-chunk": "^2.1.0",
     "request": "2.81.0",
     "sanitize-html": "^1.11.1",
     "sequelize": "^4.37.6",
