--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.19.3",
     "morgan": "1.8.1",
     "node-phantom-simple": "2.2.4",
+    "nodemailer": "^4.6.7",
     "phantomjs-prebuilt": "2.1.14",
     "read-chunk": "^2.1.0",
     "request": "2.81.0",
