--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "electron ."
+    "start": "node spacedeck.js"
   },
   "engines": {
-    "node": ">=7.8.0"
+    "node": ">=10.0.0"
   },
   "dependencies": {
     "archiver": "1.3.0",
@@ -17,12 +17,12 @@
     "cheerio": "0.22.0",
     "config": "1.25.1",
     "cookie-parser": "~1.4.3",
-    "electron": "^1.8.4",
     "execSync": "latest",
     "express": "~4.13.0",
     "file-type": "^7.6.0",
     "glob": "7.1.1",
     "gm": "1.23.0",
+    "gulp": "^4.0.2",
     "helmet": "^3.5.0",
     "i18n-2": "0.6.3",
     "log-timestamp": "latest",
