fix most vulns via npm audit fix

--- a/package.json
+++ b/package.json
@@ -13,32 +13,32 @@
     "async": "2.3.0",
     "basic-auth": "1.1.0",
     "bcryptjs": "2.4.3",
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.19.0",
     "cheerio": "0.22.0",
     "config": "1.25.1",
     "cookie-parser": "~1.4.3",
     "execSync": "latest",
-    "express": "~4.13.0",
+    "express": "^4.16.4",
     "file-type": "^7.6.0",
     "glob": "7.1.1",
-    "gm": "1.23.0",
+    "gm": "^1.23.1",
     "gulp": "^4.0.2",
     "helmet": "^3.5.0",
     "i18n-2": "0.6.3",
     "log-timestamp": "latest",
     "mock-aws-s3": "^2.6.0",
     "moment": "^2.19.3",
-    "morgan": "1.8.1",
+    "morgan": "^1.9.1",
     "node-phantom-simple": "2.2.4",
     "nodemailer": "^4.6.7",
-    "phantomjs-prebuilt": "2.1.14",
+    "phantomjs-prebuilt": "^2.1.16",
     "read-chunk": "^2.1.0",
-    "request": "2.81.0",
+    "request": "^2.88.0",
     "sanitize-html": "^1.11.1",
     "sequelize": "^4.37.6",
     "serve-favicon": "~2.4.2",
     "serve-static": "^1.13.1",
-    "slug": "0.9.1",
+    "slug": "^1.1.0",
     "sqlite3": "^4.0.0",
     "swig": "1.4.2",
     "umzug": "^2.1.0",
