wip: migrate from deprecated swig templates to ejs

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cheerio": "0.22.0",
     "config": "1.25.1",
     "cookie-parser": "~1.4.3",
+    "ejs": "3.1.5",
     "execSync": "latest",
     "express": "^4.16.4",
     "file-type": "^7.6.0",
@@ -42,7 +43,6 @@
     "serve-static": "^1.13.1",
     "slug": "^1.1.0",
     "sqlite3": "^4.0.0",
-    "swig": "1.4.2",
     "umzug": "^2.1.0",
     "underscore": "1.8.3",
     "uuid": "^3.2.1",
