--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node spacedeck.js"
+    "start": "node spacedeck.js",
+    "dev": "nodemon spacedeck.js"
   },
   "engines": {
     "node": ">=10.0.0"
@@ -48,6 +49,9 @@
     "uuid": "^3.2.1",
     "validator": "7.0.0",
     "ws": "3.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   },
   "main": "app.js",
   "description": "",
