add gulp clean css to minify css

--- a/package.json
+++ b/package.json
@@ -24,9 +24,6 @@
     "file-type": "^7.6.0",
     "glob": "7.1.1",
     "gm": "^1.23.1",
-    "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-sass": "^4.0.2",
     "helmet": "^3.5.0",
     "i18n-2": "0.6.3",
     "log-timestamp": "latest",
@@ -52,6 +49,10 @@
     "ws": "3.3.1"
   },
   "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^4.0.2",
     "nodemon": "^2.0.6"
   },
   "main": "app.js",
