--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "node-phantom-simple": "2.2.4",
     "node-server-screenshot": "^0.2.1",
     "nodemailer": "^4.6.7",
-    "phantomjs-prebuilt": "^2.1.16",
+    "puppeteer": "3.0.0",
     "read-chunk": "^2.1.0",
     "request": "^2.88.0",
     "sanitize-html": "^1.11.1",
