--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "async": "2.3.0",
     "bcryptjs": "2.4.3",
     "body-parser": "^1.19.0",
+    "chargebee": "2.6.5",
     "cheerio": "0.22.0",
     "config": "1.25.1",
     "cookie-parser": "~1.4.3",
